--- a/app/src/main/res/values/styles_app.xml
+++ b/app/src/main/res/values/styles_app.xml
@@ -19,6 +19,10 @@
         <item name="clNoteInfoText">?attr/clText</item>
         <item name="clNoteIndicator">?attr/clIcon</item>
 
+        <!-- Для switch button-->
+        <item name="srcDisableColor">?attr/clIcon</item>
+        <item name="srcSelectColor">?attr/clAccent</item>
+
         <item name="colorPrimary">?attr/clPrimary</item>
         <item name="colorPrimaryDark">?attr/clSecond</item>
         <item name="colorAccent">?attr/clAccent</item>
@@ -58,6 +62,10 @@
 
         <item name="clNoteInfoText">?attr/clSecond</item>
         <item name="clNoteIndicator">?attr/clAccent</item>
+
+        <!-- Для switch button-->
+        <item name="srcDisableColor">?attr/clIcon</item>
+        <item name="srcSelectColor">?attr/clAccent</item>
 
         <item name="colorPrimary">?attr/clPrimary</item>
         <item name="colorPrimaryDark">?attr/clPrimary</item>
