Color Dialog от частного вида к общему Описание диалогов сразу же в модуле их поиска

--- a/app/src/main/res/layout/item_color.xml
+++ b/app/src/main/res/layout/item_color.xml
@@ -1,48 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center"
+             android:gravity="center"
+             android:padding="@dimen/layout_8dp">
 
-    <data>
+    <View
+            android:id="@+id/background_view"
+            android:layout_width="@dimen/icon_48dp"
+            android:layout_height="@dimen/icon_48dp"
+            android:layout_gravity="center"
+            android:contentDescription="@null"
+            tools:background="@drawable/ic_color_00_l"/>
 
-        <import type="sgtmelon.scriptum.office.Help.Draw"/>
-
-        <variable name="position"
-                  type="int"/>
-
-    </data>
-
-    <FrameLayout
-            android:layout_width="match_parent"
+    <ImageView
+            android:id="@+id/check_image"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="@dimen/layout_8dp">
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_check"
+            tools:tint="@color/note_red_dark"/>
 
-        <View
-                android:layout_width="@dimen/icon_48dp"
-                android:layout_height="@dimen/icon_48dp"
-                android:layout_gravity="center"
-                android:background='@{Draw.getIconColor(context, position)}'
-                android:contentDescription="@null"
-                tools:background="@drawable/ic_color_00_l"/>
+    <View
+            android:id="@+id/click_view"
+            android:layout_width="@dimen/icon_48dp"
+            android:layout_height="@dimen/icon_48dp"
+            android:layout_gravity="center"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@null"/>
 
-        <ImageView
-                android:id="@+id/check_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:contentDescription="@null"
-                app:srcCompat="@drawable/ic_check"
-                tools:tint="@color/note_red_dark"/>
-
-        <View
-                android:id="@+id/click_view"
-                android:layout_width="@dimen/icon_48dp"
-                android:layout_height="@dimen/icon_48dp"
-                android:layout_gravity="center"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="@null"/>
-
-    </FrameLayout>
-</layout>
+</FrameLayout>
