Модуль safeDialog, рефакторинг интерфейсов, исправление багов, добавление Родительского фрагмента для заметки

--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -30,7 +30,7 @@
                 android:padding="@dimen/layout_8dp"
                 android:weightSum="1">
 
-            <sgtmelon.iconanim.app.SwitchButton
+            <sgtmelon.iconanim.library.SwitchButton
                     android:id="@+id/visible_button"
                     style="@style/RankItem.Button"
                     android:layout_marginEnd="@dimen/layout_8dp"
