--- a/app/src/main/res/values/strings_info.xml
+++ b/app/src/main/res/values/strings_info.xml
@@ -26,7 +26,7 @@
     <string name="info_bin_title">Bin is empty</string>
 
     <string name="info_rank_details">For add category write name in text field from top</string>
-    <string name="info_notes_details">For add new note click on central button of menu</string>
+    <string name="info_notes_details">For add new note clickListener on central button of menu</string>
     <string name="info_bin_details">Deleted notes can be restored at any time</string>
 
 </resources>
