Начал делать вступление

--- a/app/src/main/res/layout/inc_page_info.xml
+++ b/app/src/main/res/layout/inc_page_info.xml
@@ -22,19 +22,22 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/frgNotes_ll_empty"
+        android:id="@+id/incPageInfo_ll_container"
         style="@style/Info.Container">
 
         <ImageView
-            style="@style/Info.Image"
+            android:id="@+id/incPageInfo_iv_icon"
+            style="@style/Info.Icon"
             android:contentDescription="@null"
             android:src='@{Draw.get(context, icon, R.attr.clSecond)}' />
 
         <TextView
+            android:id="@+id/incPageInfo_tv_title"
             style="@style/Info.Title"
             android:text='@{context.getString(title)}' />
 
         <TextView
+            android:id="@+id/incPageInfo_tv_details"
             style="@style/Info.Details"
             android:text='@{context.getString(details)}' />
 
