--- a/app/src/main/res/layout/frg_rank.xml
+++ b/app/src/main/res/layout/frg_rank.xml
@@ -28,7 +28,7 @@
             android:layout_height="match_parent">
 
             <include
-                layout="@layout/inc_page_empty"
+                layout="@layout/inc_page_info"
                 android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
                 app:details='@{R.string.info_rank_details}'
                 app:icon='@{R.drawable.ic_rank}'
