Исправил баг с открытием одной заметки при закреплении в тулбаре

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -16,7 +16,9 @@
             android:layout_weight="1"
             android:overScrollMode="never"/>
 
-    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <com.rd.PageIndicatorView
                 android:id="@+id/page_indicator"
