--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -21,7 +21,9 @@
 
         <include layout="@layout/include_toolbar"/>
 
-        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
+        <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
             <include
                     layout="@layout/include_info"
