--- a/app/src/main/res/layout/fragment_roll.xml
+++ b/app/src/main/res/layout/fragment_roll.xml
@@ -25,8 +25,8 @@
 
             <include
                     layout="@layout/include_toolbar_note"
-                    app:noteItem='@{noteItem}'
-                    app:keyEdit='@{keyEdit}'/>
+                    app:keyEdit='@{keyEdit}'
+                    app:noteItem='@{noteItem}'/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/roll_recycler"
