--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -32,7 +32,9 @@
                 android:layout_height="match_parent"
                 android:fillViewport="true">
 
-            <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+            <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
                 <EditText
                         android:id="@+id/text_enter"
