--- a/app/src/main/res/layout/include_toolbar_rank.xml
+++ b/app/src/main/res/layout/include_toolbar_rank.xml
@@ -21,7 +21,9 @@
                 app:cardCornerRadius="@dimen/radius_2dp"
                 app:cardUseCompatPadding="false">
 
-            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
                 <ImageButton
                         android:id="@+id/cancel_button"
