--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -3,14 +3,14 @@
 
     <item android:id="@+id/page_rank_item"
           android:icon="@drawable/ic_rank"
-          android:title="@string/title_frg_rank"/>
+          android:title="@string/title_rank"/>
 
     <item android:id="@+id/page_notes_item"
           android:icon="@drawable/ic_note"
-          android:title="@string/title_frg_notes"/>
+          android:title="@string/title_notes"/>
 
     <item android:id="@+id/page_bin_item"
           android:icon="@drawable/ic_bin"
-          android:title="@string/title_frg_bin"/>
+          android:title="@string/title_bin"/>
 
 </menu>
