--- a/safedialog/src/main/res/layout/item_color.xml
+++ b/safedialog/src/main/res/layout/item_color.xml
@@ -14,6 +14,8 @@
             android:layout_gravity="center"
             android:contentDescription="@null"/>
 
+    <!-- TODO 13.10.18 Сделать область нажатия круглой, для pre API21 -->
+
     <ImageView
             android:id="@+id/check_image"
             android:layout_width="wrap_content"
