--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -14,6 +14,8 @@
 
     </data>
 
+    <!--TODO переделать в один слой с передачей данных-->
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
