--- a/app/src/main/res/layout/fragment_roll.xml
+++ b/app/src/main/res/layout/fragment_roll.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -36,7 +37,45 @@
 
         </LinearLayout>
 
-        <include layout="@layout/include_roll_enter"/>
+        <LinearLayout
+                android:id="@+id/panel_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/clBackgroundView"
+                android:orientation="vertical">
+
+            <View style="@style/Divider.Horizontal"/>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/layout_4dp">
+
+                <EditText
+                        android:id="@+id/roll_enter"
+                        style="@style/Enter.Text"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="@string/hint_enter_roll"
+                        android:imeOptions="flagNoFullscreen"
+                        android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
+                        android:maxLines="5"/>
+
+                <ImageButton
+                        android:id="@+id/add_button"
+                        style="@style/Enter.Button"
+                        android:layout_gravity="bottom"
+                        android:contentDescription="@null"
+                        app:srcCompat="@drawable/ic_add"
+                        tools:tint="?attr/clIcon"/>
+
+            </LinearLayout>
+
+            <include layout="@layout/include_note_control"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
