--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -22,9 +22,13 @@
             app:cardCornerRadius="@dimen/radius_2dp"
             app:cardUseCompatPadding="false">
 
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <FrameLayout android:layout_width="wrap_content" android:layout_height="match_parent">
+            <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
 
                 <CheckBox
                         android:id="@+id/roll_check"
