--- a/app/src/main/res/layout/sheet_add.xml
+++ b/app/src/main/res/layout/sheet_add.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom">
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/add_navigation"
+<FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/NavigationView"
-        app:itemTextColor="?attr/clText"
-        app:menu="@menu/sheet_add" />
+        android:layout_gravity="bottom">
+
+    <com.google.android.material.navigation.NavigationView
+            android:id="@+id/add_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/NavigationView"
+            app:itemTextColor="?attr/clText"
+            app:menu="@menu/sheet_add"/>
 
 </FrameLayout>
