--- a/app/src/main/res/layout/view_about.xml
+++ b/app/src/main/res/layout/view_about.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -92,18 +93,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="start"
+                    android:paddingBottom="@dimen/layout_8dp"
                     android:text="@string/about_app_used_libraries"
                     android:textColor="?attr/clText"
-                    android:paddingBottom="@dimen/layout_8dp"
                     android:textSize="@dimen/text_16sp"/>
 
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="start"
+                    android:paddingBottom="@dimen/layout_16dp"
                     android:text="@string/about_app_libraries"
                     android:textColor="?attr/clSecond"
-                    android:paddingBottom="@dimen/layout_16dp"
                     android:textSize="@dimen/text_14sp"/>
 
         </LinearLayout>
