--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -29,7 +29,7 @@
     <androidx.cardview.widget.CardView
             style="@style/Card"
             app:cardBackgroundColor='@{Clr.getNote(context, noteItem.color, false)}'
-            app:cardCornerRadius="@dimen/radius_2dp"
+            app:cardCornerRadius="@dimen/radius_4dp"
             app:cardUseCompatPadding="false"
             tools:cardBackgroundColor="?attr/clPrimary">
 
@@ -77,13 +77,12 @@
 
                 </LinearLayout>
 
-                <!-- TODO закруглить края -->
-
-                <View
+                <ImageView
                         style="@style/NoteItem.Color.Vertical"
-                        android:background='@{Clr.getNote(context, noteItem.color, true)}'
+                        android:contentDescription="@null"
+                        android:tint='@{Clr.getNote(context, noteItem.color, true)}'
                         android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}'
-                        tools:background="@color/note_green_dark"
+                        tools:tint="@color/note_green_dark"
                         tools:visibility="visible"/>
 
             </LinearLayout>
