--- a/app/src/main/res/values/dimens_app.xml
+++ b/app/src/main/res/values/dimens_app.xml
@@ -22,6 +22,7 @@
     <dimen name="elevation_4dp">4dp</dimen>
 
     <dimen name="radius_2dp">2dp</dimen>
+    <dimen name="radius_4dp">4dp</dimen>
 
     <integer name="dlg_recycler_padding">24</integer>
     <integer name="dlg_color_column">4</integer>
