--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -8,7 +8,7 @@
         <import type="sgtmelon.scriptum.office.Help.Time"/>
 
         <import alias="def"
-                type="sgtmelon.scriptum.office.annot.def.db.TypeDef"/>
+                type="sgtmelon.scriptum.office.annot.def.TypeDef"/>
 
         <import alias="v"
                 type="android.view.View"/>
